data/all_generated_tests/raw_wast_tests/call_indirect_StackCorruption_4026.wast
;; 5. **Insufficient Operands for Function Test**:    - **Description**: Execute a `call_indirect` instruction without providing sufficient operands as per the expected function signature.    - **Constraint Check**: Ensure the operation traps due to insufficient operands.    - **Stack Corruption Check**: The remaining stack after the trap should not have any altered state.

(assert_invalid
  (module
    (type (func (param i32)))
    (table 1 funcref)
    (elem (i32.const 0) 0)
    (func (result i32)
      (call_indirect (type 0) (i32.const 0))
    )
  )
  "type mismatch"
)